# rust_word_count

./: Cargo.toml  README.md
src/: lib.rs  main.rs
